--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,25 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
+    <!-- Primary Meta Tags -->
+    <title>AutoShop</title>
+    <meta name="title" content="AutoShop">
+    <meta name="description" content="Web Site AutoShop - La mejor tienda de venta de auto-partes. ">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://proyecto-react-autopartes.vercel.app/">
+    <meta property="og:title" content="AutoShop">
+    <meta property="og:description" content="Web Site AutoShop - La mejor tienda de venta de auto-partes. ">
+    <meta property="og:image" content="https://i.postimg.cc/dtSg27p3/AutoShop.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://proyecto-react-autopartes.vercel.app/">
+    <meta property="twitter:title" content="AutoShop">
+    <meta property="twitter:description" content="Web Site AutoShop - La mejor tienda de venta de auto-partes. ">
+    <meta property="twitter:image" content="https://i.postimg.cc/dtSg27p3/AutoShop.png">
+
     <title>AutoShop</title>
   </head>
   <body>
